[package]
name = "hang-cli"
description = "Media over QUIC"
authors = ["Luke Curley <kixelated@gmail.com>"]
repository = "https://github.com/moq-dev/moq"
license = "MIT OR Apache-2.0"

version = "0.7.3"
edition = "2021"

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

[[bin]]
name = "hang"
path = "src/main.rs"

[features]
default = ["iroh"]
iroh = ["moq-native/iroh"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
axum = { version = "0.8", features = ["tokio"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
bytes = "1.10"
clap = { version = "4", features = ["derive"] }
hang = { workspace = true }
moq-native = { workspace = true }
rustls = { version = "0.23", features = [
	"aws-lc-rs",
], default-features = false }
tokio = { workspace = true, features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
url = "2"

[target.'cfg(unix)'.dependencies]
sd-notify = "0.4"
