[package]
name = "hang"
description = "Media over QUIC"
authors = ["Luke Curley <kixelated@gmail.com>"]
repository = "https://github.com/moq-dev/moq"
license = "MIT OR Apache-2.0"

version = "0.10.0"
edition = "2024"

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
buf-list = "1"
bytes = "1"
futures = "0.3"
h264-parser = "0.4.0"
hex = "0.4"
lazy_static = "1"
m3u8-rs = "5"
moq-lite = { workspace = true, features = ["serde"] }
mp4-atom = { version = "0.10.0", features = ["tokio", "bytes", "serde"] }
num_enum = "0.7"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = [
	"rustls-tls",
	"gzip",
] }
scuffle-h265 = "0.2.2"
serde = { workspace = true }
serde_json = "1"
serde_with = { version = "3", features = ["hex"] }
thiserror = "2"
tokio = { workspace = true, features = ["macros", "fs"] }
tracing = "0.1"
url = "2"

[dependencies.derive_more]
version = "2"
features = ["from", "display", "debug"]

[dev-dependencies]
anyhow = "1"
moq-native = { workspace = true }
